--- a/layout/hw2.html
+++ b/layout/hw2.html
@@ -46,6 +46,16 @@
                 </div>
             </div>  
             </div>
+
+
+            <!-- — Реализовать страницу Blog (Домашнее задание 2).
+
+            Что мы можем заметить в проекте, что часть "Articles & News" 
+            повторяется. Как итог, вам необходимо создать блок Articles & News с помощью Vue.js,
+             где данные для вёрстки будут храниться в массиве объектов и выводить на страницу с помощью
+              цикла v-for.
+             -->
+
         <section id="app" class="art__news">
             <h2 class="blog__title">Articles & News</h2>
             <div class="art__news__all__block">
