--- a/layout/hw2.html
+++ b/layout/hw2.html
@@ -1,162 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;900&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-
-<body>
-
-    <header>
-        <div class="header">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+      <link rel="stylesheet" href="style.css">
+      <link
+         href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;900&family=Lato:wght@300;400;700&display=swap"
+         rel="stylesheet">
+      <link
+         href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Jost&family=Lato:wght@300;400;700&display=swap"
+         rel="stylesheet">
+   </head>
+   <body>
+      <header>
+         <div class="header">
             <div class="header__logo">
-                <a href="#"><img src="images/logo.jpg" alt=""></a>
+               <a href="#"><img src="images/logo.jpg" alt=""></a>
             </div>
             <div class="header__menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Project</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
+               <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Project</a></li>
+                  <li><a href="#">Blog</a></li>
+               </ul>
             </div>
-        </div>
-    </header>
-    <div class="content">
-        <div class="banner-blog">
-        </div>
-        
-            <div>
-                <h2 class="blog__title">Latest Post</h2></div>
-            <div class="blog">
+         </div>
+      </header>
+      <div class="content">
+         <div class="banner-blog"></div>
+         <div>
+            <h2 class="blog__title">Latest Post</h2>
+         </div>
+         <div class="blog">
             <img src="images/Image.png" alt="">
             <div class="blog__article">
-            <h2 class="blog__subtitle">Low Cost Latest Invented Interior Designing Ideas</h2>
-
-            <p class="blog__text">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpis dignissim maximus.posuere in.Contrary to popular belief.
-                Lorem Ipsum is not simply random text. It has roots in a piece of classica.</p>
-                <div class="blog__date">
-                    <p class="blog__date__text">26 December,2022 </p>
-                    <a href="blog__date__dot"></a>
-                    <img src="images/art-news-dot-next.png" alt="">
-                </div>
-            </div>  
+               <h2 class="blog__subtitle">Low Cost Latest Invented Interior Designing Ideas</h2>
+               <p class="blog__text">Lorem ipsum dolor sit amet, adipiscing Aliquam eu sem vitae turpis dignissim
+                  maximus.posuere in.Contrary to popular belief.
+                  Lorem Ipsum is not simply random text. It has roots in a piece of classica.
+               </p>
+               <div class="blog__date">
+                  <p class="blog__date__text">26 December,2022 </p>
+                  <a href="blog__date__dot"></a>
+                  <img src="images/art-news-dot-next.png" alt="">
+               </div>
             </div>
-
-
-            <!-- — Реализовать страницу Blog (Домашнее задание 2).
-
+         </div>
+         <!-- — Реализовать страницу Blog (Домашнее задание 2).
             Что мы можем заметить в проекте, что часть "Articles & News" 
             повторяется. Как итог, вам необходимо создать блок Articles & News с помощью Vue.js,
              где данные для вёрстки будут храниться в массиве объектов и выводить на страницу с помощью
               цикла v-for.
              -->
-
-        <section id="app" class="art__news">
+         <section id="app" class="art__news">
             <h2 class="blog__title">Articles & News</h2>
             <div class="art__news__all__block">
-                    <article v-for="item in goods" :key="item.id" class="art__news__block center">
-                      <div class="art__news__block__img">
-                        <img :src="item.img" alt="">
-                        <button class="art__news__bib">{{ item.title }}</button>
-                      </div>
-                      <div class="art__news__block__sub">
-                        <p class="art__news__block__title">{{ item.subTitle }}</p>
-                        <div class="art__news__date">
-                          <p class="art__news__date__text">{{ item.date }}</p>
-                          <a class="art__news__date__dot" :href="item.link"><img src="images/art-news-dot-next-cent.png" alt=""></a>
-                      </div>
-                    </article>
+               <article v-for="item in goods" :key="item.id" class="art__news__block center">
+                  <div class="art__news__block__img">
+                     <img :src="item.img" alt="">
+                     <button class="art__news__bib">{{ item.title }}</button>
                   </div>
-               
+                  <div class="art__news__block__sub">
+                     <p class="art__news__block__title">{{ item.subTitle }}</p>
+                     <div class="art__news__date">
+                        <p class="art__news__date__text">{{ item.date }}</p>
+                        <a class="art__news__date__dot" :href="item.link"><img
+                           src="images/art-news-dot-next-cent.png" alt=""></a>
+                     </div>
+               </article>
+               </div>
             </div>
-        </section>
-    </div>
-    </div>
-    <script src="https://unpkg.com/vue@next"></script>
-
-                <script>
-                    const App = {
-                      data() {
-                        return {
-                          goods: [
-                            { id: 1, img: 'images/img-art-01.png', title: "Kitchan Design", subTitle: 'Let’s Get Solution For Building Construction Work', date: '26 December,2022'},
-                            { id: 2, img: 'images/img-art-02.png', title: "Living Design", subTitle: 'Low Cost Latest Invented Interior Designing Ideas.', date: '22 December,2022'},
-                            { id: 3, img: 'images/img-art-03.png', title: "Interior Design", subTitle: 'Best For Any Office & Business Interior Solution', date: '25 December,2022'},
-                            { id: 4, img: 'images/img-art-04.png', title: "Kitchan Design", subTitle: 'Let’s Get Solution For Building Construction Work', date: '26 December,2022'},
-                            { id: 5, img: 'images/img-art-05.png', title: "Living Design", subTitle: 'Low Cost Latest Invented Interior Designing Ideas.', date: '22 December,2022'},
-                            { id: 6, img: 'images/img-art-06.png', title: "Interior Design", subTitle: 'Best For Any Office & Business Interior Solution', date: '25 December,2022'},
-                          ],
-                        };
-                      },
-                    };
-                    Vue.createApp(App).mount("#app");
-                  </script>
-
-
-<div class="pagination">
-    
-    <a href="#" class="active">01</a>
-    <a href="#">02</a>
-    <a href="#">03</a>
-    <a href="#"> &gt;</a>
-  </div>
-
-    <footer>
-        <div class="footer">
+         </section>
+      </div>
+      </div>
+      <script src="https://unpkg.com/vue@next"></script>
+      <script>
+         const App = {
+             data() {
+                 return {
+                     goods: [
+                         { id: 1, img: 'images/img-art-01.png', title: "Kitchan Design", subTitle: 'Let’s Get Solution For Building Construction Work', date: '26 December,2022' },
+                         { id: 2, img: 'images/img-art-02.png', title: "Living Design", subTitle: 'Low Cost Latest Invented Interior Designing Ideas.', date: '22 December,2022' },
+                         { id: 3, img: 'images/img-art-03.png', title: "Interior Design", subTitle: 'Best For Any Office & Business Interior Solution', date: '25 December,2022' },
+                         { id: 4, img: 'images/img-art-04.png', title: "Kitchan Design", subTitle: 'Let’s Get Solution For Building Construction Work', date: '26 December,2022' },
+                         { id: 5, img: 'images/img-art-05.png', title: "Living Design", subTitle: 'Low Cost Latest Invented Interior Designing Ideas.', date: '22 December,2022' },
+                         { id: 6, img: 'images/img-art-06.png', title: "Interior Design", subTitle: 'Best For Any Office & Business Interior Solution', date: '25 December,2022' },
+                     ],
+                 };
+             },
+         };
+         Vue.createApp(App).mount("#app");
+      </script>
+      <div class="pagination">
+         <a href="#" class="active">01</a>
+         <a href="#">02</a>
+         <a href="#">03</a>
+         <a href="#"> &gt;</a>
+      </div>
+      <footer>
+         <div class="footer">
             <div class="footer__block footer__left">
-                <div class="footer__left__logo">
-                    <a href="#"><img src="images/logo.jpg" alt=""></a>
-                </div>
-                <p class="footer__left__text">It is a long established fact that a reader will be distracted lookings.</p>
-                <div class="footer__left__socSet">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <svg width="19" height="16" viewBox="0 0 19 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M16.6367 4.59375C17.3398 4.06641 17.9727 3.43359 18.4648 2.69531C17.832 2.97656 17.0938 3.1875 16.3555 3.25781C17.1289 2.80078 17.6914 2.09766 17.9727 1.21875C17.2695 1.64062 16.4609 1.95703 15.6523 2.13281C14.9492 1.39453 14 0.972656 12.9453 0.972656C10.9062 0.972656 9.25391 2.625 9.25391 4.66406C9.25391 4.94531 9.28906 5.22656 9.35938 5.50781C6.30078 5.33203 3.55859 3.85547 1.73047 1.64062C1.41406 2.16797 1.23828 2.80078 1.23828 3.50391C1.23828 4.76953 1.87109 5.89453 2.89062 6.5625C2.29297 6.52734 1.69531 6.38672 1.20312 6.10547V6.14062C1.20312 7.93359 2.46875 9.41016 4.15625 9.76172C3.875 9.83203 3.52344 9.90234 3.20703 9.90234C2.96094 9.90234 2.75 9.86719 2.50391 9.83203C2.96094 11.3086 4.33203 12.3633 5.94922 12.3984C4.68359 13.3828 3.10156 13.9805 1.37891 13.9805C1.0625 13.9805 0.78125 13.9453 0.5 13.9102C2.11719 14.9648 4.05078 15.5625 6.16016 15.5625C12.9453 15.5625 16.6367 9.97266 16.6367 5.08594C16.6367 4.91016 16.6367 4.76953 16.6367 4.59375Z" fill="#292F36" />
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.14062 16V5.48828H0.871094V16H4.14062ZM2.48828 4.08203C3.54297 4.08203 4.38672 3.20312 4.38672 2.14844C4.38672 1.12891 3.54297 0.285156 2.48828 0.285156C1.46875 0.285156 0.625 1.12891 0.625 2.14844C0.625 3.20312 1.46875 4.08203 2.48828 4.08203ZM16.3398 16H16.375V10.2344C16.375 7.42188 15.7422 5.24219 12.4375 5.24219C10.8555 5.24219 9.80078 6.12109 9.34375 6.92969H9.30859V5.48828H6.17969V16H9.44922V10.7969C9.44922 9.42578 9.69531 8.125 11.3828 8.125C13.0703 8.125 13.1055 9.67188 13.1055 10.9023V16H16.3398Z" fill="#292F36" />
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+               <div class="footer__left__logo">
+                  <a href="#"><img src="images/logo.jpg" alt=""></a>
+               </div>
+               <p class="footer__left__text">It is a long established fact that a reader will be distracted lookings.
+               </p>
+               <div class="footer__left__socSet">
+                  <ul>
+                     <li>
+                        <a href="#">
+                           <svg width="19" height="16" viewBox="0 0 19 16" fill="none"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                 d="M16.6367 4.59375C17.3398 4.06641 17.9727 3.43359 18.4648 2.69531C17.832 2.97656 17.0938 3.1875 16.3555 3.25781C17.1289 2.80078 17.6914 2.09766 17.9727 1.21875C17.2695 1.64062 16.4609 1.95703 15.6523 2.13281C14.9492 1.39453 14 0.972656 12.9453 0.972656C10.9062 0.972656 9.25391 2.625 9.25391 4.66406C9.25391 4.94531 9.28906 5.22656 9.35938 5.50781C6.30078 5.33203 3.55859 3.85547 1.73047 1.64062C1.41406 2.16797 1.23828 2.80078 1.23828 3.50391C1.23828 4.76953 1.87109 5.89453 2.89062 6.5625C2.29297 6.52734 1.69531 6.38672 1.20312 6.10547V6.14062C1.20312 7.93359 2.46875 9.41016 4.15625 9.76172C3.875 9.83203 3.52344 9.90234 3.20703 9.90234C2.96094 9.90234 2.75 9.86719 2.50391 9.83203C2.96094 11.3086 4.33203 12.3633 5.94922 12.3984C4.68359 13.3828 3.10156 13.9805 1.37891 13.9805C1.0625 13.9805 0.78125 13.9453 0.5 13.9102C2.11719 14.9648 4.05078 15.5625 6.16016 15.5625C12.9453 15.5625 16.6367 9.97266 16.6367 5.08594C16.6367 4.91016 16.6367 4.76953 16.6367 4.59375Z"
+                                 fill="#292F36" />
+                           </svg>
+                        </a>
+                     </li>
+                     <li>
+                        <a href="#">
+                           <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                              xmlns="http://www.w3.org/2000/svg">
+                              <path
+                                 d="M4.14062 16V5.48828H0.871094V16H4.14062ZM2.48828 4.08203C3.54297 4.08203 4.38672 3.20312 4.38672 2.14844C4.38672 1.12891 3.54297 0.285156 2.48828 0.285156C1.46875 0.285156 0.625 1.12891 0.625 2.14844C0.625 3.20312 1.46875 4.08203 2.48828 4.08203ZM16.3398 16H16.375V10.2344C16.375 7.42188 15.7422 5.24219 12.4375 5.24219C10.8555 5.24219 9.80078 6.12109 9.34375 6.92969H9.30859V5.48828H6.17969V16H9.44922V10.7969C9.44922 9.42578 9.69531 8.125 11.3828 8.125C13.0703 8.125 13.1055 9.67188 13.1055 10.9023V16H16.3398Z"
+                                 fill="#292F36" />
+                           </svg>
+                        </a>
+                     </li>
+                  </ul>
+               </div>
             </div>
-                
-               
-              
-            
             <div class="footer__block footer__center">
-                <div class="footer__menu">
-                    <p class="footer__menu__title">Pages</p>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Project</a></li>
-                        <li><a href="#">Blog</a></li>
-                    </ul>
-                </div>
+               <div class="footer__menu">
+                  <p class="footer__menu__title">Pages</p>
+                  <ul>
+                     <li><a href="#">Home</a></li>
+                     <li><a href="#">Project</a></li>
+                     <li><a href="#">Blog</a></li>
+                  </ul>
+               </div>
             </div>
             <div class="footer__block footer__right">
-                <div class="footer__contact">
-                    <p class="footer__contact__title">Contact</p>
-                    <p class="footer__contact__address">55 East Birchwood Ave. Brooklyn, New York 11201</p>
-                    <p class="footer__contact__email">contact@interno.com</p>
-                    <p class="footer__contact__phone">(123) 456 - 7890</p>
-                </div>
+               <div class="footer__contact">
+                  <p class="footer__contact__title">Contact</p>
+                  <p class="footer__contact__address">55 East Birchwood Ave. Brooklyn, New York 11201</p>
+                  <p class="footer__contact__email">contact@interno.com</p>
+                  <p class="footer__contact__phone">(123) 456 - 7890</p>
+               </div>
             </div>
-        </div>
-    </footer>
-
-</body>
-
+         </div>
+      </footer>
+   </body>
 </html>
