--- a/layout/style.css
+++ b/layout/style.css
@@ -90,6 +90,123 @@
   border-radius: px;
 }
 
+.banner-blog {
+  background: url(images/Banner.jpg) center top no-repeat;
+  height: 356px;
+}
+
+.article {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-top: 70px;
+}
+
+.topic {
+  padding-left: calc(50% - 600px);
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+}
+.topic__article {
+  color: #4d5053;
+  font-size: 22px;
+  line-height: 150%;
+  letter-spacing: 0.22px;
+  padding-bottom: 21px;
+  padding-left: 65px;
+  padding-right: 70px;
+  display: flex;
+  flex-direction: column;
+}
+.topic__quotes {
+  color: #CDA274;
+  background-color: #F4F0EC;
+  text-align: center;
+  height: 267px;
+  border-radius: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-style: italic;
+}
+.topic__title {
+  padding-left: calc(50% - 600px);
+  padding-right: calc(50% - 600px);
+  color: #292f36;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125%;
+  font-family: "DM Serif Display", serif;
+  letter-spacing: 1px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+.topic__subtitle {
+  color: #292f36;
+  font-family: "DM Serif Display", serif;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125%;
+  letter-spacing: 0.5px;
+}
+.topic__text {
+  color: #4d5053;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 200%;
+  letter-spacing: 0.22px;
+  padding-bottom: 30px;
+  padding-top: 40px;
+}
+.topic__date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.topic__date__text {
+  color: #4d5053;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0.16px;
+  text-transform: capitalize;
+}
+
+.btn {
+  display: flex;
+  padding: 0 25px;
+  margin: 5px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  height: 46px;
+  line-height: 46px;
+  font-size: 14px;
+  text-decoration: none;
+  color: #444;
+  background-color: #F4F0EC;
+  cursor: pointer;
+}
+
+.btn:focus-visible {
+  border: 1px solid #4c51f9;
+  outline: none;
+}
+
+.btn:active {
+  background-color: #808080;
+}
+
+.tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 * {
   margin: 0;
   padding: 0;
